[gd_scene load_steps=7 format=3 uid="uid://u1m0kcl66o30"]

[ext_resource type="Script" uid="uid://bsyte60sr0ow1" path="res://scripts/player.gd" id="1_v0iea"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_f60y1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_v0iea"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f60y1"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_f60y1"]
length = 0.926975

[sub_resource type="SphereShape3D" id="SphereShape3D_v0iea"]
radius = 2.5809

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_v0iea")
SPEED = 10.0

[node name="Modelo" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.987057, 0)
mesh = SubResource("CapsuleMesh_f60y1")

[node name="direccion" type="MeshInstance3D" parent="Modelo"]
transform = Transform3D(0.0166137, -0.492021, 0, 1.00934, 0.00809865, 0, 0, 0, 1, 0.368861, 0.347121, 0)
mesh = SubResource("CapsuleMesh_v0iea")
skeleton = NodePath("../..")

[node name="Colision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_f60y1")

[node name="StairsColision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.529804, 0.924135, 0.00735927)
shape = SubResource("SeparationRayShape3D_f60y1")

[node name="Interaccion" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interaccion"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03657, 0)
shape = SubResource("SphereShape3D_v0iea")

[node name="Interaccion_label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 60
text = "Interactuar \"E\""

[connection signal="body_entered" from="Interaccion" to="." method="_on_interaccion_body_entered"]
[connection signal="body_exited" from="Interaccion" to="." method="_on_interaccion_body_exited"]
